--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <title>佛教经典</title>
 <meta name="description" content="" />
 <meta name="keywords" content="" />
-<link href="/templets/default/common/css/bootstrap.min.css" rel="stylesheet">
-<link href="/templets/default/common/css/bootstrap-responsive.min.css" rel="stylesheet">
-<link href="/templets/default/common/css/dbcms.css" rel="stylesheet">
+<link href="./templets/default/common/css/bootstrap.min.css" rel="stylesheet">
+<link href="./templets/default/common/css/bootstrap-responsive.min.css" rel="stylesheet">
+<link href="./templets/default/common/css/dbcms.css" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" href="/favicon.ico">
 </head>
