--- a/text/金刚经.html
+++ b/text/金刚经.html
@@ -5,9 +5,9 @@
 <title>金刚般若波罗蜜经</title>
 <meta name="keywords" content="金刚般若波罗蜜经" />
 <meta name="description" content="金刚般若波罗蜜经" />
-<link href="/templets/default/common/css/bootstrap.min.css" rel="stylesheet">
-<link href="/templets/default/common/css/bootstrap-responsive.min.css" rel="stylesheet">
-<link href="/templets/default/common/css/dbcms.css" rel="stylesheet">
+<link href="./templets/default/common/css/bootstrap.min.css" rel="stylesheet">
+<link href="./templets/default/common/css/bootstrap-responsive.min.css" rel="stylesheet">
+<link href="./templets/default/common/css/dbcms.css" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" href="/favicon.ico">
 </head>
