--- a/text/金刚经.html
+++ b/text/金刚经.html
@@ -91,9 +91,9 @@
     </div>
     <div class = "row-fluid bottomlink hidden-phone">
       <div class = "span3"> </div>
-      <div class = "span6 text-center"> <a class = "btn" href = "javascript:window.alert('上一篇：没有了');">(←)上一章</a> <a class = "btn" href = "/buddhist-scriptures/">回目录</a> <a class = "btn" href = "/text/观音经.html">下一章(→)</a> </div>
+      <div class = "span6 text-center"> <a class = "btn" href = "javascript:window.alert('上一篇：没有了');">(←)上一章</a> <a class = "btn" href = "../index.html">回目录</a> <a class = "btn" href = "./观音经.html">下一章(→)</a> </div>
     </div>
-    <div class = "bottomlink visible-phone  text-center"> <a class = "btn" href = "javascript:window.alert('上一篇：没有了');">(←)上一章</a> <a class = "btn" href = "/buddhist-scriptures/">回目录</a> <a class = "btn" href = "/text/观音经.html">下一章(→)</a> </div>
+    <div class = "bottomlink visible-phone  text-center"> <a class = "btn" href = "javascript:window.alert('上一篇：没有了');">(←)上一章</a> <a class = "btn" href = "../index.html">回目录</a> <a class = "btn" href = "./观音经.html">下一章(→)</a> </div>
   </div>
 </div>
 </body>
