--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="./templets/default/common/css/bootstrap-responsive.min.css" rel="stylesheet">
 <link href="./templets/default/common/css/dbcms.css" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="shortcut icon" href="/favicon.ico">
+<link rel="shortcut icon" href="./favicon.ico">
 </head>
 <body>
 <header class="jumbotron subhead ">
