更新心经、药师经

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <h2 class="text-center">佛教经典 目录</h2>
     <div class="row-fluid">
       <div class="span4 item" style="margin-left:0"> <a href="./text/金刚经.html" title="金刚般若波罗蜜经">金刚般若波罗蜜经</a> </div>
+        <div class="span4 item" style="margin-left:0"> <a href="./text/心经.html" title="般若波罗蜜多心经">般若波罗蜜多心经</a> </div>
  </div>
 
     <!--兼容版，可保证页面完全兼容-->
