更新开头结尾

--- a/text/药师经.html
+++ b/text/药师经.html
@@ -88,9 +88,9 @@
         </div>
         <div class = "row-fluid bottomlink hidden-phone">
             <div class = "span3"> </div>
-            <div class = "span6 text-center"> <a class = "btn" href = "./心经.html">(←)上一章</a> <a class = "btn" href = "../index.html">回目录</a> <a class = "btn" href = "./地藏经.html">下一章(→)</a> </div>
+            <div class = "span6 text-center"> <a class = "btn" href = "./心经.html">(←)上一章</a> <a class = "btn" href = "../index.html">回目录</a> <a class = "btn" href = "开头结尾.html">下一章(→)</a> </div>
         </div>
-        <div class = "bottomlink visible-phone  text-center"> <a class = "btn" href = "./心经.html">(←)上一章</a> <a class = "btn" href = "../index.html">回目录</a> <a class = "btn" href = "./地藏经.html">下一章(→)</a> </div>
+        <div class = "bottomlink visible-phone  text-center"> <a class = "btn" href = "./心经.html">(←)上一章</a> <a class = "btn" href = "../index.html">回目录</a> <a class = "btn" href = "开头结尾.html">下一章(→)</a> </div>
     </div>
 </div>
 </body>
