--- a/text/心经.html
+++ b/text/心经.html
@@ -23,7 +23,10 @@
         <div class = "content">
 
             <p><span style="color: #000000;">开经</span></p>
-            <p><span style="color: #000000;">如是我闻。一时佛在王舍大城灵鹫山中。与大比丘众满百千人。菩萨摩诃萨七万七千人俱。其名曰观世音菩萨。文殊师利菩萨。弥勒菩萨等。以为上首。皆得三昧总持。住不思议解脱。尔时观自在菩萨摩诃萨在彼敷坐。于其众中即从座起。诣世尊所。面向合掌。曲躬恭敬。瞻仰尊颜而白佛言。世尊。我欲于此会中。说诸菩萨普遍智藏般若波罗蜜多心。唯愿世尊听我所说。为诸菩萨宣秘法要。尔时。世尊以妙梵音。告观自在菩萨摩诃萨言。善哉善哉。具大悲者。听汝所说。与诸众生作大光明。于是观自在菩萨摩诃萨蒙佛听许。佛所护念。入于慧光三昧正受。入此定已。以三昧力行深般若波罗蜜多时。照见五蕴自性皆空。彼了知五蕴自性皆空。从彼三昧安详而起。即告慧命舍利弗言。善男子。菩萨有般若波罗蜜多心。名普遍智藏。汝今谛听。善思念之。吾当为汝分别解说。</span></p>
+            <p><span style="color: #000000;">如是我闻。一时佛在王舍大城灵鹫山中。与大比丘众满百千人。菩萨摩诃萨七万七千人俱。其名曰观世音菩萨。文殊师利菩萨。弥勒菩萨等。以为上首。皆得三昧总持。住不思议解脱。</span></p>
+            <p><span style="color: #000000;">尔时观自在菩萨摩诃萨在彼敷坐。于其众中即从座起。诣世尊所。面向合掌。曲躬恭敬。瞻仰尊颜而白佛言。世尊。我欲于此会中。说诸菩萨普遍智藏般若波罗蜜多心。唯愿世尊听我所说。为诸菩萨宣秘法要。</span></p>
+            <p><span style="color: #000000;">尔时世尊以妙梵音。告观自在菩萨摩诃萨言。善哉善哉。具大悲者。听汝所说。与诸众生作大光明。</span></p>
+            <p><span style="color: #000000;">于是观自在菩萨摩诃萨蒙佛听许。佛所护念。入于慧光三昧正受。入此定已。以三昧力行深般若波罗蜜多时。照见五蕴自性皆空。彼了知五蕴自性皆空。从彼三昧安详而起。即告慧命舍利弗言。善男子。菩萨有般若波罗蜜多心。名普遍智藏。汝今谛听。善思念之。吾当为汝分别解说。</span></p>
             <p><span style="color: #000000;">正文</span></p>
             <p><span style="color: #000000;">观自在菩萨，行深般若波罗蜜多时，照见五蕴皆空，度一切苦厄。</span></p>
             <p><span style="color: #000000;">舍利子，色不异空，空不异色，色即是空，空即是色，受想行识，亦复如是。舍利子，是诸法空相，不生不灭，不垢不净，不增不减。</span></p>
