--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       <div class="span4 item" style="margin-left:0"> <a href="./text/金刚经.html" title="金刚般若波罗蜜经">金刚般若波罗蜜经</a> </div>
       <div class="span4 item" style="margin-left:0"> <a href="./text/心经.html" title="般若波罗蜜多心经">般若波罗蜜多心经</a> </div>
       <div class="span4 item" style="margin-left:0"> <a href="./text/药师经.html" title="药师琉璃光如来本愿功德经">药师琉璃光如来本愿功德经</a> </div>
-      <div class="span4 item" style="margin-left:0"> <a href="./text/开头结尾.html" title="药师琉璃光如来本愿功德经">开头结尾</a> </div>
+      <div class="span4 item" style="margin-left:0"> <a href="./text/开头结尾.html" title="开头结尾">开头结尾</a> </div>
+      <div class="span4 item" style="margin-left:0"> <a href="./text/地藏经.html" title="地藏菩萨本愿经">地藏菩萨本愿经</a> </div>
  </div>
 
     <!--兼容版，可保证页面完全兼容-->
