--- a/text/开头结尾.html
+++ b/text/开头结尾.html
@@ -40,12 +40,17 @@
             <p><span style="color: #000000;">南无XXX</span></p>
             <p><span style="color: #000000;">开经偈</span></p>
             <p><span style="color: #000000;">无上甚深微妙法，百千万劫难遭遇。我今见闻得受持，愿解如来真实义。</span></p>
-            <p><span style="color: #000000;"> </span></p>
+            <p><span style="color: #000000;">—</span></p>
             <p><span style="color: #000000;">结尾</span></p>
             <p><span style="color: #000000;">地藏经回向文</span></p>
             <p><span style="color: #000000;">弟子XXX愿以此所诵《地藏经》(或念佛菩萨圣号)之功德，回向给弟子XXX累生累世的冤亲债主、历代宗亲。祈请南无大慈大悲地藏王菩萨慈悲做主，超拨他们，令业障消除，离苦得乐，往生净土。弟子XXX真心求忏悔。</span></p>
             <p><span style="color: #000000;">弟子XXX愿以此所诵《地藏经》(或念佛菩萨圣号)之功德，回向给弟子XXX累生累世的冤亲债主、历代宗亲。祈请南无大慈大悲地藏王菩萨慈悲做主，超拨他们，令业障消除，离苦得乐，往生净土。弟子XXX真心求忏悔。</span></p>
             <p><span style="color: #000000;">弟子XXX愿以此所诵《地藏经》(或念佛菩萨圣号)之功德，回向给弟子XXX累生累世的冤亲债主、历代宗亲。祈请南无大慈大悲地藏王菩萨慈悲做主，超拨他们，令业障消除，离苦得乐，往生净土。弟子XXX真心求忏悔。</span></p>
+            <p><span style="color: #000000;">回向偈</span></p>
+            <p><span style="color: #000000;">愿以此功德，庄严佛净土；</span></p>
+            <p><span style="color: #000000;">上报四重恩，下济三途苦。</span></p>
+            <p><span style="color: #000000;">若有见闻者，悉发菩提心；</span></p>
+            <p><span style="color: #000000;">尽此一报身，同生极乐国。</span></p>
             <p><span style="color: #000000;">普通回向文</span></p>
 
 
@@ -54,9 +59,9 @@
         </div>
         <div class = "row-fluid bottomlink hidden-phone">
             <div class = "span3"> </div>
-            <div class = "span6 text-center"> <a class = "btn" href = "./药师经.html">(←)上一章</a> <a class = "btn" href = "../index.html">回目录</a> <a class = "btn" href = "./观音经.html">下一章(→)</a> </div>
+            <div class = "span6 text-center"> <a class = "btn" href = "./药师经.html">(←)上一章</a> <a class = "btn" href = "../index.html">回目录</a> <a class = "btn" href = "./地藏经.html">下一章(→)</a> </div>
         </div>
-        <div class = "bottomlink visible-phone  text-center"> <a class = "btn" href = "./药师经.html">(←)上一章</a> <a class = "btn" href = "../index.html">回目录</a> <a class = "btn" href = "./观音经.html">下一章(→)</a> </div>
+        <div class = "bottomlink visible-phone  text-center"> <a class = "btn" href = "./药师经.html">(←)上一章</a> <a class = "btn" href = "../index.html">回目录</a> <a class = "btn" href = "./地藏经.html">下一章(→)</a> </div>
     </div>
 </div>
 </body>
